test/parser.d/invalid/typedef-struct-3.surc.bad
def struct NonEmptyList(Int) = { non_empty_list(head: I)(etc: List(I)) }
